Remoção do config, definição de onde ficara os arquivos, mudança do nome do arquivo txt para drl e build v1.0